fixed Java 11 warnings
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>